/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * These .proto interfaces are public and stable.
 * Please see http://wiki.apache.org/hadoop/Compatibility
 * for what changes are allowed for a *stable* .proto interface.
 */

option java_package = "org.apache.hadoop.yarn.registry.proto";
option java_outer_classname = "RegistryProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message ServerProto {
  optional string server_id = 1;
  optional string host = 2;
  optional int32  port = 3;
  optional int64  hb_timestamp = 4;
}

message SecurityDataProto {
  optional string name = 1;
  optional bytes data = 2;
}

message VirtualHostProto {
  optional string name = 1;
  optional string scheme = 2;
  optional int32 port = 3;
  optional int32 server_timeout_secs = 4;
  repeated string owner = 5;
  repeated SecurityDataProto security_data = 6;
}
